# GibsonEnv

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  Dockerfile.bak  Dockerfile2  Dockerfile_server  LICENSE  MANIFEST.in  README.md  ae_sanity_check.py  align_view.ipynb  build.sh  combine.py  completion.py  datasets.py  download.sh  filler.py  filler_panorama.py  filler_panorama_pc.py  gifenc.sh  inference.ipynb  inference2.ipynb  init.sh  long_description.rst  misaln.py  render.cpp  requirements.txt  setup.py  show_3d.py  show_3d2.py  simple_test.py  utils.py  vnc_client.py
.github/: build-and-publish.yml  build_manylinux.yml
.github/workflows/: block_build_manylinux2010.yml  block_build_manylinux2014.yml  block_duplicated_workflows.yml  build-and-publish.yml  build_manylinux.yml  build_manylinux_2010.yml  build_manylinux_2010_2014.yml  build_manylinux_2014.yml  build_ubuntu_latest.yml  build_wheels.yml  cancel_github_actions.yml
archive/: filler_panorama.py  mean.py
build_scripts/: before_all_linux.sh  before_build_linux.sh  build_bdists.sh  build_manylinux.sh  build_wheel.sh  configure_linux.sh  configure_system.sh  requirements.txt  setup_python.sh  setup_python_versions.sh
client/: simple_test.py  test_client.py
data/: .gitignore  README.md  check_napoli.sh  create_images_utils.py  create_mist_images.py  create_normal_images.py  create_rgb_images.py  datatasks.py  generate_data.sh  generate_points.py  load_settings.py  package-lock.json  settings.py  start.py  utils.py
depth/: .gitignore  .hgignore  CMakeLists.txt  README.md  parse_pose_rotation.py  posefile
depth/common/: controls.cpp  controls.hpp  objloader.cpp  render_cuda_f.cu  render_cuda_f.h  vboindexer.cpp
depth/depth_render/: StandardShadingRTT.fragmentshader  StandardShadingRTT.vertexshader  WobblyTexture.fragmentshader  demo.cpp  depth_render  hwclient.cpp  hwclient.py  render.cpp  transfer.pyx
dev/: build.sh  build_cuda.sh  completion.py  completion2.py  datasets.py  depth_utils.py  filler_panorama_dae.py  filler_panorama_pc_full_res.py  filler_panorama_pc_full_res_avg.py  filler_panorama_pc_full_res_avg_comp2_perceptual.py  filler_panorama_pc_full_res_sampl.py  generate_data.py  generate_data2.py  generate_data3.py  generate_data_select.ipynb  generate_data_select_idw.py  get_mean_img.ipynb  inference.ipynb  interp.m  new_stn.ipynb  occinf.cu  pose_adjust.py  pose_debug.ipynb  profiler.py  render.cpp  render_cuda.cu  render_cuda_filter.cu  show_3d2.py  show_3d2_f.py  show_3d2_f_avg.py  show_3d2_f_bak.py  show_3d2_f_interp.py  show_3d2_ph.py  show_depth.py  show_occ.py  transfer.c  transfer.pyx
docker/: Dockerfile  Makefile  README.md  init.sh  run.sh
examples/ros/gibson-ros/turtlebot/kobuki_description/: .cproject  CHANGELOG.rst  CMakeLists.txt  package.xml
examples/ros/gibson-ros/turtlebot/kobuki_description/launch/: view_model.launch
examples/ros/gibson-ros/turtlebot/kobuki_description/rviz/: model.rviz
examples/ros/gibson-ros/turtlebot/kobuki_description/urdf/: kobuki_gazebo.urdf.xacro
examples/ros/gibson-ros/turtlebot/turtlebot_description/: package.xml  test.launch
examples/ros/gibson-ros/turtlebot/turtlebot_description/meshes/sensors/: asus_xtion_pro_live.dae
examples/ros/gibson-ros/turtlebot/turtlebot_description/meshes/stacks/hexagons/: plate_bottom.dae  plate_middle.dae  pole_bottom.dae  pole_kinect.dae  pole_top.dae
examples/ros/gibson-ros/turtlebot/turtlebot_description/robots/: roomba_circles_kinect.urdf.xacro
examples/ros/gibson-ros/turtlebot/turtlebot_description/robots/graveyard/: turtlebot.urdf.xacro  turtlebot2_kinect.urdf.xacro  turtlebot2_xtion.urdf.xacro  turtlebot_xtion_pro.urdf.xacro
examples/ros/gibson-ros/turtlebot/turtlebot_description/test/: test_urdf.cpp
examples/ros/gibson-ros/turtlebot/turtlebot_description/urdf/: turtlebot_gazebo.urdf.xacro  turtlebot_properties.urdf.xacro
examples/ros/gibson-ros/turtlebot/turtlebot_description/urdf/graveyard/: asus_xtion_pro.urdf.xacro  turtlebot_hardware.urdf.xacro
examples/ros/gibson-ros/turtlebot/turtlebot_description/urdf/sensors/: kinect.urdf.xacro
gibson/: .gitignore  README.md  configs.py
gibson/assets/models/turtlebot/turtlebot_description/: .cproject  .project  CMakeLists.txt  readme.txt  turtlebot.urdf
gibson/assets/models/turtlebot/turtlebot_description/meshes/stacks/hexagons/: plate_top.dae  pole_middle.dae
gibson/assets/models/turtlebot/turtlebot_description/robots/: create_circles_asus_xtion_pro.urdf.xacro  kobuki_hexagons_asus_xtion_pro.urdf.xacro  kobuki_hexagons_kinect.urdf.xacro
gibson/assets/models/turtlebot/turtlebot_description/urdf/: gazebo.urdf.xacro  turtlebot_library.urdf.xacro
gibson/assets/models/turtlebot/turtlebot_description/urdf/graveyard/: turtlebot.urdf.xacro  turtlebot_body.urdf.xacro  turtlebot_kinect.urdf.xacro  xtion_turtlebot2.urdf.xacro
gibson/assets/models/turtlebot/turtlebot_description/urdf/sensors/: asus_xtion_pro.urdf.xacro
gibson/assets/models/turtlebot/turtlebot_description/urdf/stacks/: circles.urdf.xacro  hexagons.urdf.xacro
gibson/core/channels/: .gitignore  CMakeLists.txt  FindFreeImagePlus.cmake  depth_render.py  parse_pose_rotation.py
gibson/core/channels/common/: JSONtexture.hpp  MTLobjloader.cpp  MTLobjloader.hpp  MTLplyloader.cpp  MTLplyloader.hpp  MTLtexture.cpp  MTLtexture.hpp  controls.cpp  objloader.cpp  objloader.hpp  picojson.h  plyloader.cpp  plyloader.h  quaternion_utils.cpp  semantic_color.hpp  shader.cpp  tangentspace.cpp  tangentspace.hpp  texture.cpp  tinyply.cpp  tinyply.h  vboindexer.cpp  vboindexer.hpp
gibson/core/channels/depth_render/: MistShadingRTT.fragmentshader  NormalShadingRTT.fragmentshader  Passthrough.vertexshader  SemanticsShadingRTT.fragmentshader  SemanticsShadingRTT.vertexshader  WobblyTexture.fragmentshader  render.cpp  semantic.cpp
gibson/core/render/: CMakeLists.txt  README.md  pcrender.py  profiler.py  render_cuda_filter.cu  test_render.py
misc/: CHANGELOG.md
physics/: PhysicsObject.py  README.md  render_physics.py  settings.py
realenv/: __init__.py  configs.py  main.py
(+563 files in other folders)
