<package>
  <name>kobuki_description</name>
  <version>0.7.6</version>
  <description>
      Description of the Kobuki model.
      Provides the model description of Kobuki for simulation and visualisation. The files in this 
      package are parsed and used by a variety of other components. Most users will not interact directly
      with this package.
      
      WARNING: This package is disabled because it cannot be catkinized by now, as xacro dependency is not
      catkin still. In the interim we use a unary pre-catkin stack named kobuki_description.
  </description>
  <author email="stonier@yujinrobot.com">Daniel Stonier</author>
  <author email="marcus.liebhardt@yujinrobot.com">Marcus Liebhardt</author>
  <author email="yhju@yujinrobot.com">Younghun Ju</author>
  <maintainer email="yhju@yujinrobot.com">Younghun Ju</maintainer>
  <license>BSD</license>
  <url type="bugtracker">https://github.com/yujinrobot/kobuki/issues</url>
  <url type="repository">https://github.com/yujinrobot/kobuki</url>
  <url type="website">http://ros.org/wiki/kobuki_description</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>

  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>
</package>
